[package]
name = "canopen-sdo"
version = "0.2.0"
edition = "2021"
# `impl core::error::Error` (error.rs) is stable since 1.81; consumers (e.g.
# comeow) adopting 0.2 must use rustc >= 1.81.
rust-version = "1.81"
description = "Sans-IO CANopen SDO client and server (CiA 301) — expedited, segmented, abort; no_std, with optional tokio glue."
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexmecha/canopen-sdo.git"
keywords = ["canopen", "sdo", "cia301", "sans-io", "can"]
categories = ["embedded", "network-programming", "no-std"]
authors = ["KisonHe <kisonhepenpal@gmail.com>"]

# Files that live in this repo for development/testing convenience but
# are not useful to consumers of the published crate. Without this
# `cargo publish` would ship the entire vendored CANopenNode tree
# (~1 MB of Apache-2.0 C source) inside the .crate tarball.
exclude = [
    "/CANopenNode-test",
    "/CANopenNodeTest.png",
]

[dependencies]
# Host-only: pulled in by the `tokio` async glue.
thiserror = { version = "1", optional = true }
log = { version = "0.4", optional = true }
can-transport = { version = "0.1.1", optional = true }
# can-transport = { path = "../can-transport", version = "0.1", optional = true }
tokio = { version = "1", features = ["time", "macros", "sync", "rt"], optional = true }

[features]
default = ["tokio"]
# Sans-io SDO *client* (master). Needs an allocator for the payload buffers.
client = ["alloc"]
alloc = []
# Sans-io SDO *server* (node). no_std + no alloc (fixed `[u8; N]` buffer).
server = []
# Async, tokio-based convenience layer driving the client over a
# `can-transport::CanBus`. Host-only; implies `client` + std.
tokio = ["dep:tokio", "dep:can-transport", "dep:thiserror", "dep:log", "client"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
anyhow = "1"

# `socketcan` only builds on Linux. Keep it (and the examples that drive a real
# bus) Linux-only so the sans-io lib unit tests still run on macOS/Windows via:
#   cargo test --lib --no-default-features --features client,server
[target.'cfg(target_os = "linux")'.dev-dependencies]
can-transport = { version = "0.1.1", features = ["socketcan", "gs_usb"] }
# can-transport = { path = "../can-transport", features = ["socketcan", "gs_usb"] }

[[example]]
name = "upload_download"
required-features = ["tokio"]

[[example]]
name = "against_canopennode"
required-features = ["tokio"]

[[example]]
name = "sdo_gs_usb"
required-features = ["tokio"]

# Server-side demo: runs our SdoServer as a node on a SocketCAN bus, to be
# driven by an *independent* SDO master (python-canopen, cocomm, …). Needs the
# `server` state machine plus the `tokio` SocketCAN glue.
[[example]]
name = "server_demo"
required-features = ["tokio", "server"]
